syntax = "proto3";

package models;

option go_package = "github.com/bsanzhiev/taco-delivery/models";

service OrderService {
  rpc CreateOrder(Order) returns (OrderResponse);
  rpc GetOrder(OrderID) returns (Order);
}

message Order {
  int64 id = 1;
  int64 UserID = 2;
  string Items = 3; // or array of strings
  string status = 4;
}

message OrderID {
  int64 id = 1;
}

message OrderResponse {
  int64 id = 1;
  string status = 2;
}
